--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,71 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Google</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/style.less" />
+
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <div class="container">
+      <img
+        class="logo"
+        id="logo"
+        src="./images/google-logo.png"
+        alt="logo"
+        width="272"
+        height="92"
+      />
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+      <div class="input-wrapper">
+        <button type="submit" class="button-icon-search">
+          <svg width="16" height="16">
+            <use href="./icons/sprite.svg/#icon-google-search"></use>
+          </svg>
+        </button>
+        <input type="text" class="input" />
+
+        <button type="button" class="button-icon-keyboard">
+          <img src="./images/keyboard.png" width="24" height="24" />
+        </button>
+
+        <button type="button" class="button-icon-microphone">
+          <svg width="24" height="32">
+            <use href="./icons/sprite.svg/#icon-google-microphone"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="buttons-wrapper">
+        <button type="submit" class="button-search">Пошук Google</button>
+        <button id="target" type="submit" class="button-search">Мені пощастить</button>
+      </div>
+
+      <div class="language">
+        Мова Google:
+        <a
+          href="https://www.google.com/setprefs?sig=0_rzSjB3WE-eLFJeEoimnW0VyGbqM%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwiN1Kbixa36AhX-QvEDHSsvC38Q2ZgBCBA"
+          >English
+        </a>
+        <a
+          href="https://www.google.com/setprefs?sig=0_rzSjB3WE-eLFJeEoimnW0VyGbqM%3D&hl=ru&source=homepage&sa=X&ved=0ahUKEwiN1Kbixa36AhX-QvEDHSsvC38Q2ZgBCBE"
+          >русский</a
+        >
+      </div>
+    </div>
+
     <script src="./index.js"></script>
   </body>
 </html>
