bug fixes, logo-toggle added, JQuery added

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,14 @@
     />
     <link rel="stylesheet" href="styles/style.less" />
 
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
   </head>
   <body>
     <div class="container">
       <img
         class="logo"
         id="logo"
-        src="./images/google-logo.png"
+        src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
         alt="logo"
         width="272"
         height="92"
